Fixed bug #24007 (Problem with register_globals & arrays)